--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "client-s3-deploy": "aws s3 sync build/ s3://0xedu.xyz"
   },
   "eslintConfig": {
     "extends": [
